# vektori-platform

./: README.md  index.html  package-lock.json  package.json
backend/: pyproject.toml
backend/src/vektori_backend/: cli.py
backend/src/vektori_backend/diagnosis/: __init__.py  labeling.py  models.py  provenance.py  rollouts.py  scoring.py
backend/src/vektori_backend/envgen/: __init__.py  auth.py  emitter.py  env_guard.py  github.py  llm.py  pr_runtime.py  pr_runtime_validate.py  pr_runtime_verifier.py  result.py  reward.py  spec.py
backend/src/vektori_backend/envgen/bootstrap/: __init__.py  agent.py  cache.py  docker.py  language.py  presets.py  prompts.py  runner.py  spec.py
backend/src/vektori_backend/envgen/log_parsers/: __init__.py  cargo_parser.py  go_parser.py  jest_parser.py  pytest_parser.py
backend/tests/: test_e2e_integration.py  test_envgen_pr_runtime.py  test_labeling.py  test_provenance.py  test_rollouts_contract.py  test_scoring.py
backend/tests/fixtures/encode__httpx-3367/: instruction.md  task.toml
backend/tests/fixtures/encode__httpx-3367/environment/: Dockerfile  docker-compose.yaml
backend/tests/fixtures/encode__httpx-3367/solution/: patch.diff  solve.sh
backend/tests/fixtures/encode__httpx-3367/tests/: f2p.json  p2p.json  test.sh  verifier.py
docs/: DESIGN.md
src/: App.tsx  index.css  types.ts
src/components/: Badge.tsx  Bars.tsx  CodeBlock.tsx  PageHeader.tsx  Sidebar.tsx  StatCard.tsx  Table.tsx  TerminalCard.tsx  Topbar.tsx  TurnItem.tsx  ui.tsx
src/data/: environment.json  environments.ts  run8.json  runs.ts
(+9 files in other folders)
