[project]
name = "vektori-backend"
version = "0.1.0"
description = "TRACE-style capability diagnosis on top of a GitHub repo's real PR history."
requires-python = ">=3.12"
dependencies = [
    "litellm>=1.83.14",
    "pydantic>=2.12.5",
    "tomli-w>=1.2.0",
]

[project.scripts]
vektori-backend = "vektori_backend.cli:main"

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -m 'not integration'"
markers = ["integration: needs Docker + a live model, skipped by default"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501", "B008", "SIM105", "SIM117", "RUF001", "RUF002", "RUF003"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]
